@@ -244,7 +244,11 @@
       Parameters dialog</a> and choose the method and parameters for aligning. When 
       frame alignment is selected, an indicator below this checkbox will show which 
       method is selected: &#39;Align in DM&#39;, &#39;Align in Plugin&#39;, and either &#39;Align in IMOD&#39; 
-      or &#39;TS only in IMOD&#39; when the third method is chosen.</P>
+      or &#39;TS only in IMOD&#39; when the third method is chosen.&nbsp; In the 
+      latter two cases, frame saving will be activated automatically; the &#39;Save 
+      Frames&#39; checkbox will be disabled and shown as checked.&nbsp; When frame 
+      alignment is turned off or the option to align with IMOD is no longer selected, 
+      the &#39;Save Frames&#39; checkbox will revert to its original setting.</P>
     <P><b>Save Frames</b></P>
     <P>Select this checkbox to have SerialEM's plugin to DM save each frame to 
       disk.&nbsp; See above.</P>
