@@ -1569,7 +1569,7 @@
         After you press 'Yes' to proceed, the program will do a search to refine the 
         scaling and rotation implied by the two lines.&nbsp; At the end, it will 
         transform the image in A by the scaling and rotation and toggle between the 
-        near-focus image image the transformed image.&nbsp; The it will ask you if those 
+        near-focus image and the transformed image.&nbsp; Then it will ask you if those 
         appeared aligned.</li>
       <li>Press 'Yes' to accept the calibration, or 'No' to reject it.&nbsp; If the 
         images were not aligned, examine the lines to see if they can be improved, or 
